[package]
name = "claude-logger"
version = "0.1.0"
edition = "2021"
authors = ["Toshihiro Suzuki"]
description = "Real-time monitoring tool for Claude Code conversations with webhook support"
repository = "https://github.com/suzuki-toshihir0/claude-logger"
license = "MIT"
readme = "README.md"
keywords = ["claude", "monitoring", "logger", "webhook", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
